--- a/idol_gallery/idol_detail/kiyomi_test.html
+++ b/idol_gallery/idol_detail/kiyomi_test.html
@@ -8,8 +8,8 @@
     <meta http-equiv="expires" content="-1">
     <meta name="format-detection" content="telephone=no">
     <title>アイドルマスター シンデレラガールズ</title>
-    <link rel="stylesheet" type="text/css" href="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/css/rich/new_mypage_common.css" media="all">
-    <link rel="apple-touch-icon-precomposed" href="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/icon_bookmark.png">
+    <link rel="stylesheet" type="text/css" href="../../css/rich/new_mypage_common.css" media="all">
+    <link rel="apple-touch-icon-precomposed" href="../../image_sp/ui/icon_bookmark.png">
     <script>
         (function() {
             window.console.log = function() {};
@@ -35,11 +35,11 @@
             document.write('<meta name="viewport" content="width=device-width, user-scalable=no">');
         }
     </script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/jquery-2.2.2.min.js"></script>
+    <script src="../../js/jquery-2.2.2.min.js"></script>
     <script>
         (function() {
             window.viewer_id = 134800333;
-            var _url = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error/report_js_error";
+            var _url = "../../game_error/report_js_error";
             var _path = location.href;
             var _spec_obj;
             var _spec = 'none';
@@ -64,22 +64,22 @@
             }
         })();
     </script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/underscore-min.js"></script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/require.js"></script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/require.js"></script>
+    <script src="../../js/underscore-min.js"></script>
+    <script src="../../js/require.js"></script>
+    <script src="../../js/require.js"></script>
     <script>
         requirejs.config({
             paths: {
-                easeljs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/easeljs-0.8.2.min.js",
-                easeljs_0_7_1: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/easeljs-0.7.1.min.js", //スプライトを読むためのバージョン
-                tweenjs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/tweenjs-0.6.2.min.js",
-                movieclipjs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/movieclip-0.7.1.min.js",
-                createjs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/createjs-2015.11.26.min.js",
+                easeljs: "../../js/easeljs-0.8.2.min.js",
+                easeljs_0_7_1: "../../js/easeljs-0.7.1.min.js", //スプライトを読むためのバージョン
+                tweenjs: "../../js/tweenjs-0.6.2.min.js",
+                movieclipjs: "../../js/movieclip-0.7.1.min.js",
+                createjs: "../../js/createjs-2015.11.26.min.js",
             }
         })
     </script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/common.js"></script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/common_new.js"></script>
+    <script src="../../js/common.js"></script>
+    <script src="../../js/common_new.js"></script>
     <script>
         $(function() {
             window.$ibox = $('.ibox').ibox();
@@ -98,14 +98,14 @@
             chrome_app_flg = 0,
             chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
     </script>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/app_sound.js'></script>
-    <link rel="stylesheet" type="text/css" href="http://sp.pf-img-a.mbga.jp/css/base.css?20171116" />
+    <script type='text/javascript' src='../../js/app_sound.js'></script>
+    <link rel="stylesheet" type="text/css" href="../../css/base.css" />
 </head>
 
 <body id="idol_gallery" class="idol_detail">
     <div id="top" class="page_container jsOnBtn">
         <input id="delay" type="hidden" value="0">
-        <link rel="stylesheet" type="text/css" href="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/css/rich/idol_gallery.css" media="all">
+        <link rel="stylesheet" type="text/css" href="../../css/rich/idol_gallery.css" media="all">
         <style>
             .idolProfile {
                 margin-bottom: 0;
@@ -232,14 +232,14 @@
             <div class="displayBox" style="-webkit-box-pack:center;width:300px;">
                 <div style="width:50%">
                     <a class="btn_3rd_anniversary js_submit_check_idol_comment_3rd m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="get" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/campaign/check_idol_comment' class="form_check_idol_comment_3rd" style="display:none;">
+                    <form method="get" action='../../campaign/check_idol_comment' class="form_check_idol_comment_3rd" style="display:none;">
                         <input type="hidden" name="character_id" value="196">
                         <input type="hidden" name="select_card_hash" value="">
                     </form>
                 </div>
                 <div style="width:50%">
                     <a class="btn_5th_anniversary js_submit_check_idol_comment_5th m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="get" action='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/campaign_present/redirect_flash_idol_comment_replay' class="form_check_idol_comment_5th" style="display:none;">
+                    <form method="get" action='../../campaign_present/redirect_flash_idol_comment_replay' class="form_check_idol_comment_5th" style="display:none;">
                         <input type="hidden" name="card_hash" value="">
                         <input type="hidden" name="redirect_url" value="">
                         <input type="hidden" name="campaign_id" value="114">
@@ -274,12 +274,12 @@
             }
 
             .ep_on {
-                background: url('http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/rich/icon/icon_checkbox_on.png') no-repeat 35px 5px;
+                background: url('../../image_sp/ui/rich/icon/icon_checkbox_on.png') no-repeat 35px 5px;
                 background-size: 21px;
             }
 
             .ep_off {
-                background: url('http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/rich/icon/icon_checkbox_off.png') no-repeat 35px 5px;
+                background: url('../../image_sp/ui/rich/icon/icon_checkbox_off.png') no-repeat 35px 5px;
                 background-size: 21px;
             }
             -->
@@ -727,7 +727,7 @@ kg
                 overflow: hidden;
                 position: absolute;
                 top: 0;
-                background: url('http://125.6.169.35/idolmaster/image_sp/ui/rich/effect/card_effect_01.png') center center;
+                background: url('../../image_sp/ui/rich/effect/card_effect_01.png') center center;
                 background-size: 608px 506px;
             }
         </style>
