--- a/idol_gallery/idol_detail/kiyomi_test.html
+++ b/idol_gallery/idol_detail/kiyomi_test.html
@@ -3702,7 +3702,23 @@ kg
                         "28": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/d6be32a4312ef65e6697fbd4da5b3926.jpg",
                         "34": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_no_p/l/b970ebc965b269077472e101842c0a3e.jpg"
                     },
-                    "l_noframe": [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, 
+                    "l_noframe": [null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
+                                  null, 
                                   "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/8dd85e79dbfde7f5888c4aabd5805d4b.jpg", 
                                   "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/789218d49debfd49fe6ea42ed26e7839.jpg", 
                                   "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l_noframe/65358f57a96b392c90e1b573723939e1.jpg", 
@@ -3941,25 +3957,25 @@ kg
             var comment_tab_start = null;
             var show_premium = true;
         </script>
-        <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/createjs.min.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/196_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/3513502_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/196_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/196_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/3516202_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/196_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/196_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/196_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/3438601_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/3538602_sign_effect.js'></script>
-        <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/196_sign_effect.js'></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/underscore-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/backbone-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/ilibrary.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/islider.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/boombox.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/min/gallery.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/min/bb_loader.min.js" type="text/javascript"></script>
+        <script type='text/javascript' src='../../js/createjs.min.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3513502_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3516202_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3438601_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3538602_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
+        <script src="../../js/underscore-min.js"></script>
+        <script src="../../js/backbone-min.js"></script>
+        <script src="../../js/ilibrary.js" type="text/javascript"></script>
+        <script src="../../js/islider.js" type="text/javascript"></script>
+        <script src="../../js/boombox.min.js" type="text/javascript"></script>
+        <script src="../../js/min/gallery.min.js" type="text/javascript"></script>
+        <script src="../../js/min/bb_loader.min.js" type="text/javascript"></script>
         <div class="m-Top8 m-Btm8">
             <img src="http://sp.pf-img-a.mbga.jp/12008305?url=http://125.6.169.35/idolmaster/image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
