--- a/idol_gallery/idol_detail/kiyomi_test.html
+++ b/idol_gallery/idol_detail/kiyomi_test.html
@@ -4010,8 +4010,9 @@ kg
             <img src="http://sp.pf-img-a.mbga.jp/12008305?url=http://125.6.169.35/idolmaster/image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_gallery%3Fl_frm%3DIdol_gallery_idol_detail_1%26rnd%3D547621037'>
-            <div class="backLink">アイドルギャラリーTOP</div>
+        <a href='../../item/show_premium_card_cjs/90/kiyomi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">키요미 키라펜 연출</a>
+        <a href='../../mypage.html'>
+            <div class="backLink">マイページへ</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
