--- a/idol_gallery/idol_detail/kiyomi_test.html
+++ b/idol_gallery/idol_detail/kiyomi_test.html
@@ -4012,7 +4012,7 @@ kg
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
         <a href='../../item/show_premium_card_cjs/90/kiyomi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">키요미 키라펜 연출</a>
         <a href='../../mypage.html'>
-            <div class="backLink">マイページへ</div>
+            <div class="backLink">マイスタジオ</div>
         </a>
         <footer>
             <div class="line_idolmaster"></div><a href="#top" id="toPageTop" class="mypage_under">
