--- a/idol_gallery/idol_detail/kiyomi_test.html
+++ b/idol_gallery/idol_detail/kiyomi_test.html
@@ -1757,9 +1757,11 @@ kg
                         "is_trade_limit": false
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "3516202",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/3516202_sign_effect",
                     "archive": {
                         "normal": "1",
-                        "premium": "0"
+                        "premium": "1"
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
