--- a/idol_gallery/idol_detail/kiyomi_test.html
+++ b/idol_gallery/idol_detail/kiyomi_test.html
@@ -2009,9 +2009,11 @@ kg
                         "is_trade_limit": false
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "196",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/196_sign_effect",
                     "archive": {
                         "normal": "1",
-                        "premium": "0"
+                        "premium": "1"
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
@@ -2827,9 +2829,11 @@ kg
                         "is_trade_limit": false
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "3442301",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/3442301_sign_effect",
                     "archive": {
                         "normal": "1",
-                        "premium": "0"
+                        "premium": "1"
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
@@ -2915,9 +2919,11 @@ kg
                         "is_trade_limit": false
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "3542302",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/3542302_sign_effect",
                     "archive": {
                         "normal": "1",
-                        "premium": "0"
+                        "premium": "1"
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
@@ -2997,9 +3003,11 @@ kg
                         "is_trade_limit": true
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "3442401",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/3442401_sign_effect",
                     "archive": {
                         "normal": "1",
-                        "premium": "0"
+                        "premium": "1"
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
@@ -3079,9 +3087,11 @@ kg
                         "is_trade_limit": true
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "3542402",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/3542402_sign_effect",
                     "archive": {
                         "normal": "1",
-                        "premium": "0"
+                        "premium": "1"
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
@@ -3398,9 +3408,11 @@ kg
                         "is_trade_limit": false
                     },
                     "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "196",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/196_sign_effect",
                     "archive": {
                         "normal": "1",
-                        "premium": "0"
+                        "premium": "1"
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
@@ -4000,6 +4012,11 @@ kg
         <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/3438601_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/3538602_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3442301_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3542302_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3442401_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/3542402_sign_effect.js'></script>
+        <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
         <script src='../../js/cjs/sign_effect/196_sign_effect.js'></script>
         <script src="../../js/underscore-min.js"></script>
         <script src="../../js/backbone-min.js"></script>
