--- a/idol_gallery/idol_detail/kiyomi_test.html
+++ b/idol_gallery/idol_detail/kiyomi_test.html
@@ -4026,7 +4026,7 @@ kg
         <script src="../../js/min/gallery.min.js" type="text/javascript"></script>
         <script src="../../js/min/bb_loader.min.js" type="text/javascript"></script>
         <div class="m-Top8 m-Btm8">
-            <img src="http://sp.pf-img-a.mbga.jp/12008305?url=http://125.6.169.35/idolmaster/image_sp/ui/line_hoshi.jpg" width="100%">
+            <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
         <a href='../../item/show_premium_card_cjs/90/kiyomi_main.html' class="btn_normal_line_2 m-Cnt m-Btm12">키요미 키라펜 연출</a>
